syntax = "proto3";

option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option java_package = "io.net.api";
option java_outer_classname = "BaseProto";

message GroupCmd {
  repeated uint64 ats = 1;
  uint64 groupId = 2;
  uint64 botId = 3;
  uint64 senderId = 4;
  string cmd = 5;
  repeated string args = 6;
}

message MsgResult {
  Code code = 1;
  string msg = 2;
  Data data = 3;
  string foot = 4;
  Receipt receipt = 5;

  enum Code {
    OK = 0;
    BUSINESS_ANOMALY = 1;
    RPC_ANOMALY = 2;
  }

  message Data {
    MediaType type = 1;
    bytes bytes = 2;

    enum MediaType {
      PICTURE = 0;
      AUDIO = 1;
    }
  }

  message Receipt {
    int32 recall = 1;
    string fallback = 2;
  }
}